--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
 	},
 	"dependencies": {
 		"next": "^15.2.3",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
 		"nextra": "^4.2.17",
-		"nextra-theme-docs": "^4.2.17"
+		"nextra-theme-docs": "^4.2.17",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0"
 	},
-	"packageManager": "pnpm@10.6.5+sha512.cdf928fca20832cd59ec53826492b7dc25dc524d4370b6b4adbf65803d32efaa6c1c88147c0ae4e8d579a6c9eec715757b50d4fa35eea179d868eada4ed043af"
+	"packageManager": "pnpm@10.6.5+sha512.cdf928fca20832cd59ec53826492b7dc25dc524d4370b6b4adbf65803d32efaa6c1c88147c0ae4e8d579a6c9eec715757b50d4fa35eea179d868eada4ed043af",
+	"devDependencies": {
+		"pagefind": "^1.3.0"
+	}
 }
