--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"scripts": {
 		"dev": "next --turbopack",
 		"build": "next build",
-		"start": "next start"
+		"start": "next start",
+		"postbuild": "pagefind --site .next/server/app --output-path out/_pagefind"
 	},
 	"dependencies": {
 		"next": "^15.2.3",
