--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"scripts": {
 		"dev": "next --turbopack",
-		"build": "next build && npm postbuild",
+		"build": "next build",
 		"start": "next start",
 		"postbuild": "pagefind --site .next/server/app --output-path out/_pagefind"
 	},
