--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 		"dev": "next --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"postbuild": "pagefind --site .next/server/app --output-path out/_pagefind"
+		"postbuild": "pagefind --site .next/server/app --output-path public/_pagefind"
 	},
 	"dependencies": {
 		"next": "^15.2.3",
